# computer_enhance

./: .gitignore  README.md  build.bat  terminal_environment_setup.ps1
part_1/: 8086.hpp  util.h
part_2/: Cargo.toml  vim-cheat-sheet.txt
part_2/clocks/: Cargo.toml
part_2/clocks/src/: lib.rs  main.rs
part_2/haversine/: Cargo.toml
part_2/haversine/src/: lib.rs
part_2/haversine_gen/: Cargo.toml
part_2/haversine_gen/src/: lib.rs  main.rs
part_2/json_parser/: Cargo.toml
part_2/json_parser/src/: lib.rs
part_2/json_parser/tests/: tests.rs
part_2/kotlin_enhance/src/main/kotlin/: Main.kt
part_2/profiler/: Cargo.toml
part_2/profiler/src/: lib.rs  main.rs
part_2/rand_casey/src/: lib.rs
part_2/repetition_testing/: Cargo.toml
part_2/repetition_testing/src/: main.rs
part_2/src/: main.rs  utils.rs
part_2/utils/src/: lib.rs
part_3/: rat_homework.txt
part_3/repetition_testing/: Cargo.toml
part_3/repetition_testing/src/: main.rs
src/: 8086.cpp  8086.hpp  add.cpp  main.cpp  main.h  platform_windows.h  util.h
src/part_1/: build.bat  main.cpp  main.h
src/part_2/: Cargo.toml
src/part_2/haversine/src/: lib.rs
src/part_2/haversine_gen/: Cargo.toml
src/part_2/haversine_gen/src/: lib.rs  main.rs
src/part_2/json_parser/: Cargo.toml
src/part_2/json_parser/src/: lib.rs
src/part_2/json_parser/tests/: tests.rs
src/part_2/src/: main.rs
