[package]
name = "repetition_testing"
version = "0.1.0"
edition = "2021"

[dependencies]
clocks = { path = "../../part_2/clocks" }

[dependencies.windows-sys]
version = "0.48"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_ProcessStatus",
]
